<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">


    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>3.3.2</version>
        <relativePath/>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <artifactId>ping-distribute</artifactId>
    <name>Ping 应用服务</name>
    <packaging>jar</packaging>

    <properties>
        <liquibase.version>4.15.0</liquibase.version>
        <ping.version>1.0.0</ping.version>
        <java.version>21</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
        <compiler.version>${java.version}</compiler.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springdoc.version>2.5.0</springdoc.version>
        <mapstruct.version>1.5.3.Final</mapstruct.version>
        <google.auto.version>1.1.1</google.auto.version>
        <manifold.version>2024.1.16</manifold.version>
        <web.server.port>10000</web.server.port>
        <spring-dev>false</spring-dev>
    </properties>

    <dependencies>

        <dependency>
            <groupId>cn.procsl</groupId>
            <artifactId>ping-product</artifactId>
            <version>${ping.version}</version>
        </dependency>

        <dependency>
            <groupId>cn.procsl</groupId>
            <artifactId>ping-system</artifactId>
            <version>${ping.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-properties-migrator</artifactId>
            <scope>runtime</scope>
        </dependency>


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>

        <finalName>${project.artifactId}-${database.type}-${ping.version}</finalName>

        <testResources>
            <testResource>
                <directory>${project.basedir}/src/test/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>*.jks</exclude>
                    <exclude>*.pfx</exclude>
                    <exclude>*.txt</exclude>
                </excludes>
            </testResource>
        </testResources>

        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>*.jks</exclude>
                    <exclude>*.pfx</exclude>
                    <exclude>*.txt</exclude>
                </excludes>

            </resource>
        </resources>


        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <generatedSourcesDirectory>
                        ${project.build.directory}/generated-sources/java
                    </generatedSourcesDirectory>
                    <compilerVersion>${compiler.version}</compilerVersion>

                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>

                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                            <version>${project.version}</version>
                        </path>

                        <path>
                            <groupId>org.springframework</groupId>
                            <artifactId>spring-context-indexer</artifactId>
                            <version>${spring-framework.version}</version>
                        </path>

                    </annotationProcessorPaths>

                    <verbose>true</verbose>
                    <showWarnings>true</showWarnings>
                    <!--保留参数名称-->
                    <maxmem>2048m</maxmem>
                    <compilerArgs>
                        <arg>-g</arg>
                        <arg>-Xlint:unchecked</arg>
                        <arg>-Xlint:deprecation</arg>
                        <arg>-parameters</arg>
                        <arg>-proc:full</arg>
                    </compilerArgs>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>utf-8</encoding>
                    <!-- 过滤后缀为p12、pem、pfx的证书文件 -->
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>p12</nonFilteredFileExtension>
                        <nonFilteredFileExtension>cer</nonFilteredFileExtension>
                        <nonFilteredFileExtension>pem</nonFilteredFileExtension>
                        <nonFilteredFileExtension>pfx</nonFilteredFileExtension>
                        <nonFilteredFileExtension>jkx</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>1.0.0</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>read-project-properties</goal>
                        </goals>
                        <configuration>
                            <name>project.activeProfiles</name>
                            <propertiyName>spring.profiles.active</propertiyName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>cn.procsl.ping.app.DistributeApplication</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

    <profiles>

        <profile>
            <id>undertow</id>
            <dependencies>

                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-undertow</artifactId>
                </dependency>

                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-web</artifactId>
                    <exclusions>
                        <exclusion>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-starter-tomcat</artifactId>
                        </exclusion>

                        <exclusion>
                            <groupId>org.apache.tomcat.embed</groupId>
                            <artifactId>tomcat-embed-websocket</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>

            </dependencies>
        </profile>

        <profile>
            <id>h2</id>
            <properties>
                <database.type>h2</database.type>
            </properties>

            <dependencies>
                <dependency>
                    <groupId>com.h2database</groupId>
                    <artifactId>h2</artifactId>
                </dependency>
            </dependencies>

        </profile>

        <profile>
            <id>mysql8</id>

            <properties>
                <database.type>mysql8</database.type>
            </properties>

            <dependencies>
                <dependency>
                    <groupId>com.mysql</groupId>
                    <artifactId>mysql-connector-j</artifactId>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>postgresql</id>
            <properties>
                <database.type>postgresql</database.type>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>org.postgresql</groupId>
                    <artifactId>postgresql</artifactId>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>openapi</id>
            <dependencies>

                <dependency>
                    <groupId>org.springdoc</groupId>
                    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                    <version>${springdoc.version}</version>
                </dependency>

                <dependency>
                    <groupId>org.springdoc</groupId>
                    <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
                    <version>${springdoc.version}</version>
                </dependency>

                <dependency>
                    <groupId>org.springdoc</groupId>
                    <artifactId>springdoc-openapi-starter-common</artifactId>
                    <version>${springdoc.version}</version>
                </dependency>

            </dependencies>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.springdoc</groupId>
                            <artifactId>springdoc-openapi-maven-plugin</artifactId>
                            <version>1.3</version>
                            <executions>
                                <execution>
                                    <id>integration-test</id>
                                    <goals>
                                        <goal>generate</goal>
                                    </goals>
                                </execution>
                            </executions>

                            <configuration>
                                <apiDocsUrl>http://localhost:${web.server.port}/v3/api-docs</apiDocsUrl>
                                <outputFileName>openapi.json</outputFileName>
                                <outputDir>${project.build.directory}/spring-doc</outputDir>
                                <skip>false</skip>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>

        </profile>

        <profile>
            <id>monitor</id>

            <dependencies>
                <dependency>
                    <groupId>de.codecentric</groupId>
                    <artifactId>spring-boot-admin-starter-client</artifactId>
                </dependency>

                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-actuator</artifactId>
                </dependency>

                <dependency>
                    <groupId>de.codecentric</groupId>
                    <artifactId>spring-boot-admin-starter-server</artifactId>
                </dependency>

            </dependencies>

            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>de.codecentric</groupId>
                        <artifactId>spring-boot-admin-starter-client</artifactId>
                        <version>3.3.2</version>
                    </dependency>

                    <dependency>
                        <groupId>de.codecentric</groupId>
                        <artifactId>spring-boot-admin-starter-server</artifactId>
                        <version>3.3.2</version>
                    </dependency>
                </dependencies>
            </dependencyManagement>

        </profile>

        <profile>
            <id>dependency-check</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.owasp</groupId>
                        <artifactId>dependency-check-maven</artifactId>
                        <version>7.3.2</version>
                        <configuration>
                            <skipProvidedScope>true</skipProvidedScope>
                        </configuration>

                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>

        <profile>
            <id>debug</id>
            <properties>
                <spring-dev>true</spring-dev>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-devtools</artifactId>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <configuration>
                            <mainClass>cn.procsl.ping.app.DistributeApplication</mainClass>
                            <buildArgs>
                                --no-fallback
                                -Ob
                                <!--                                -H:+DashboardAll-->
                                -H:+BuildReport
                                --initialize-at-build-time=ch.qos.logback
                                --trace-object-instantiation=ch.qos.logback.classic.Logger
                                --initialize-at-run-time=sun.net.dns.ResolverConfigurationImpl
                                --report-unsupported-elements-at-runtime
                                --allow-incomplete-classpath
                                -H:+ReportExceptionStackTraces
                                -H:EnableURLProtocols=http
                                -H:EnableURLProtocols=https
                                --enable-url-protocols=http
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>


</project>
